--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Welcome to Jekyll!
 
 # Website settings
-title: Jalpc
-description: Jack's blog,use Jekyll and github pages.
-keywords: Jack,Jalpc,blog,Jekyll,github,gh-pages
+title: JuYeong
+description: JuYeong Blog
+keywords: ''
 baseurl: ''
-url: https://ravieeeee.github.io
+url: https://ravieeeee.github.io/blog
 # url: http://127.0.0.1:4000
 img_path: /static/assets/img/blog  # url should be '/homepage/static/assets/img/blog' as before
 
