--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -4,4 +4,4 @@
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
 - name: Algorithm
-  href: /blog/algorithm
+  href: /algorithm/
