--- a/_config.yml
+++ b/_config.yml
@@ -16,19 +16,19 @@ author:  # change following line to your infomation.
   last_name: Pyeon  # Be used at index page about me section.
   avatar: /static/assets/img/landing/avatar.jpg  # upload your avatar at directory and edit it.
   github_username: ravieeeee  # Leave blank if you don't have now
-  linkedin_id: '' # Leave blank if you don't have now
-  facebook_username: ''  # Leave blank if you don't have now
-  twitter_username: ''  # Leave blank if you don't have now
+  # linkedin_id: '' # Leave blank if you don't have now
+  facebook_username: juyeongpyeon  # Leave blank if you don't have now
+  # twitter_username: ''  # Leave blank if you don't have now
   email: pyeonjy97@gmail.com  # Leave blank if you don't have now
-  cv: ''  # An online CV can be printed as PDF, leave blank if you don't have now
+  # cv: ''  # An online CV can be printed as PDF, leave blank if you don't have now
   # skill icons are on avatar's left and right side. Reference urls are http://fontawesome.io/ and http://fizzed.com/oss/font-mfizz
   skill_icon1:
-    - name: icon-apache
-    - name: fa-linux
+    - name: icon-reactjs
+    - name: fa-vuejs
   skill_icon2:
-    - name: fa-linux
-    - name: icon-apache
-  desc: Introduce myself will be here.  # Describe yourself.
+    - name: icon-android
+    - name: icon-aws
+  desc: netflix만큼 개발이 좋아요
 
 # comment
 # disqus:  # if you wanna comment feature, go to https://disqus.com/ to get your configuration; if not, comment following two lines.
