--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -5,3 +5,6 @@
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
 - name: Algorithm
   href: /algorithm/
+
+- name: Etc
+  href: /etc/
