블로그 꽃단장

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ author:
   skill_icon2:
     - name: fa-android
     - name: icon-aws
-  desc: netflix만큼 개발이 좋아요
+  desc: netflix와 자기 개발, 프로그램 개발을 좋아합니다.
 
 # analytics
 ## google analytics
