--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "yarn run clean && gatsby develop",
     "build": "yarn run clean && gatsby build",
-    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public -b master",
+    "deploy": "yarn run clean && gatsby build --prefix-paths && gh-pages -d public -b master -r https://github.com/ravieeeee/ravieeeee.github.io",
     "clean": "rimraf .cache public",
     "flow": "flow",
     "lint:js": "eslint --fix --cache --ext .js,.jsx .",
