Change circleci configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,4 +33,8 @@ jobs:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
 
-      - run: yarn deploy
+      - run:
+        command: |
+          git config --global user.email "pyeonjy97@gmail.com"
+          git config --global user.name "ravieeeee"
+          yarn deploy
