--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-optimize-svgs": "^1.0.3",
     "gatsby-plugin-react-helmet": "^3.1.5",
+    "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.1.12",
     "gatsby-plugin-sharp": "^2.2.18",
     "gatsby-plugin-sitemap": "^2.2.9",
