--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-plugin-netlify-cms": "^4.1.11",
     "gatsby-plugin-offline": "^2.2.10",
     "gatsby-plugin-optimize-svgs": "^1.0.3",
+    "gatsby-plugin-react-helmet": "^3.1.6",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sass": "^2.1.12",
     "gatsby-plugin-sharp": "^2.2.18",
